PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-

* Changes since Version 0.4.1:
** Modifications, Fixes and Improvements:
- Fix: The *pel-rst-open-target* function, used by *pel-open-at-point* in
  reStructuredText buffers, now properly handle target links that include
  characters that must be escaped.  It now also works when the directory of
  the reStructuredText file is not the current working directory.
- Fix: warning generated by pel-add-hook-for was invalidly referring to lispy.
- Fix: The PEL key bindings for iedit-mode described in PEL documentation were not
  activated (such as ~M-C~ for upper-casing all instances).  This is now fixed.
- Fix: *pel-replace-regexp* and *pel-query-replace-regexp* commands:
  they now call the proper regexp replacement function when using the Emacs
  default regular expression syntax instead of the non-regexp string replacement
  function.  Also clarified the PDF documentation for these commands.
- Fix: The *pel-emacs-mem-stats* command no longer attempts to print the value
  of misc-objects-consed which is not bound in Linux.
- Fix: On Linux and Windows the ~<insert>~ key is now mapped to yank, as
  it's already done for macOS.
- Fix: Several EDTS commands were not autoloaded by EDTS code.  PEL code now
  autoloads them when EDTS is requested.  This includes the EDTS debug, eunit
  and dialyzer commands.
- Fix: *pel-require* can now install and load at run time, not only load-time,
  allowing to write code that use external packages to install them only when
  required.  There is still one issue left: the package installed this way
  will be removed by *pel-cleanup*: will need to add a mechanism to take this
  type of installation into account.
- New: key binding ~<f6> 6~ to *complete-symbol* and ~<f6> 7~ to
  *info-complete-symbol* to provide more flexible access to the completion
  commands with bindings available in all environments.  These position of the
  keys in the sequences should make them easy to type.