@@ -2,6 +2,9 @@ PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-
 
 * Changes since Version 0.4.1:
 ** Modifications, Fixes and Improvements:
+- Fix: The *pel-open-at-point* command now handles links properly when the
+  user has forcibly changed the current directory to something other than the
+  parent of the buffer's visited file.
 - Fix: The *pel-rst-open-target* function, used by *pel-open-at-point* in
   reStructuredText buffers, now properly handle target links that include
   characters that must be escaped.  It now also works when the directory of
